generated session tokens, no teacher's schedule,no session, no user list in admin, can't access json file as admin