@@ -84,9 +84,6 @@
               <value>${project.build.directory}</value>
             </systemProperty>
           </systemProperties>
-          <jvmArgs>
-            <jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
-          </jvmArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -99,9 +96,9 @@
               <mainClass>${main.class}</mainClass>
             </transformer>
           </transformers>
-          <excludes>
-            <exclude>junit:junit</exclude>
-          </excludes>
+<!--          <excludes>-->
+<!--            <exclude>junit:junit</exclude>-->
+<!--          </excludes>-->
         </configuration>
         <executions>
           <execution>
@@ -159,13 +156,13 @@
           <artifactId>maven-shade-plugin</artifactId>
           <version>3.6.2</version>
           <configuration>
-            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-              <mainClass>sms.Main</mainClass>
-            </transformer>
-            <excludes>
-                <exclude>classworlds:classworlds</exclude>
-                  <exclude>junit:junit</exclude>
-                </excludes>
+<!--            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+<!--              <mainClass>sms.Main</mainClass>-->
+<!--            </transformer>-->
+<!--            <excludes>-->
+<!--                <exclude>classworlds:classworlds</exclude>-->
+<!--                  <exclude>junit:junit</exclude>-->
+<!--                </excludes>-->
           </configuration>
           <executions>
             <execution>
